TEST_PROGRAMS/INVALID_TYPECHECK/short_var_decl.go
package main;

func main() {
    var x int;
    var y string;
    //must have a new variable
    x,y := 5, "7";
    print(foo(x,x));
}

